# gb-emulator

./: $  CMakeLists.txt  README.md  alu.c  alu.h  fileio.c  fileio.h  gbtyp.h  main.c  registers.c  registers.h
cpu/: alu.c  alu.h  cu.c  cu.h  interrupt.c  interrupt.h  memory.c  memory.h  registers.c  registers.h  translator.c  translator.h
design_docs/: concept.md
libs/: binary.h
roms/Pokemon/: Vimm's Lair.txt  dump.txt
roms/Tetris/: dump.txt
tests/: run_test.sh  run_test_binary.sh  run_test_cu.sh  run_test_reg.sh  run_test_translator.sh  test  test_alu.c  test_binary.c  test_cu.c  test_registers.c  test_translator.c
